--- a/overlay-lineage/packages/apps/Settings/res/values/lineage_config.xml
+++ b/overlay-lineage/packages/apps/Settings/res/values/lineage_config.xml
@@ -15,9 +15,8 @@
      limitations under the License.
 -->
 <resources>
-    <!-- Whether to show peak refresh rate in display settings -->
-    <bool name="config_show_peak_refresh_rate_switch">true</bool>
 
-    <!-- Whether to show min refresh rate in display settings -->
-    <bool name="config_show_min_refresh_rate_switch">true</bool>
+    <!-- Whether to show refresh rate switch in display settings -->
+    <bool name="config_show_refresh_rate_switch">true</bool>
+
 </resources>
