--- a/overlay-lineage/packages/apps/Settings/res/values/lineage_config.xml
+++ b/overlay-lineage/packages/apps/Settings/res/values/lineage_config.xml
@@ -16,7 +16,7 @@
 -->
 <resources>
 
-    <!-- Whether to show refresh rate switch in display settings -->
-    <bool name="config_show_refresh_rate_switch">true</bool>
+    <!-- Whether to show min/max refresh rate in display settings -->
+    <bool name="config_show_refresh_rate_controls">true</bool>
 
 </resources>
