--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -577,22 +577,22 @@
         -->
    <string name="config_mainBuiltInDisplayCutout" translatable="false">M 0,0 H -36 V 91 H 36 V 0 H 0 Z</string>
 
-   <!-- Indicates whether device has a power button fingerprint sensor. -->
-   <bool name="config_is_powerbutton_fps">true</bool>
+    <!-- Indicates whether device has a power button fingerprint sensor. -->
+    <bool name="config_is_powerbutton_fps">true</bool>
 
-   <!-- An array of arrays of side fingerprint sensor properties relative to each display.
-        Note: this value is temporary and is expected to be queried directly
-        from the HAL in the future. -->
-   <array name="config_sfps_sensor_props" translatable="false">
-       <item>@array/config_sfps_sensor_props_0</item>
-   </array>
+    <!-- An array of arrays of side fingerprint sensor properties relative to each display.
+         Note: this value is temporary and is expected to be queried directly
+         from the HAL in the future. -->
+    <array name="config_sfps_sensor_props" translatable="false">
+        <item>@array/config_sfps_sensor_props_0</item>
+    </array>
 
-   <array name="config_sfps_sensor_props_0" translatable="false">
-       <item></item> <!--item>displayId</item-->
-       <item></item> <!--item>sensorLocationX</item-->
-       <item>920</item> <!--item>sensorLocationY</item-->
-       <item>220</item> <!--item>sensorRadius</item-->
-   </array>
+    <array name="config_sfps_sensor_props_0" translatable="false">
+        <item>local:4630946688386997377</item> <!--item>displayId</item-->
+        <item>1080</item> <!--item>sensorLocationX</item-->
+        <item>910</item> <!--item>sensorLocationY</item-->
+        <item>115</item> <!--item>sensorRadius</item-->
+    </array>
 
     <!-- The default refresh rate. POCO X3 manages this using the peak refresh rate setting, so set
          this value to 0 so it has no effect. -->
@@ -601,7 +601,7 @@
     <!-- The default peak refresh rate. -->
    <integer name="config_defaultPeakRefreshRate">120</integer>
 
-   <!-- Controls the navigation bar interaction mode:
+    <!-- Controls the navigation bar interaction mode:
         0: 3 button mode (back, home, overview buttons)
         1: 2 button mode (back, home buttons + swipe up for overview)
         2: gestures only for back, home and overview -->
